adding personalized parsons backend

--- a/projects/book_server/Dockerfile
+++ b/projects/book_server/Dockerfile
@@ -27,6 +27,7 @@ RUN apt update
 
 # copy project
 COPY ./dist/$wheel /usr/src/app/$wheel
+COPY ./example_code_question_bank.xlsx /usr/src/app/example_code_question_bank.xlsx
 # When you pip install a wheel it also installs all of the dependencies
 # which are stored in the METADATA file inside the wheel
 RUN pip install --no-cache-dir --upgrade /usr/src/app/$wheel
