--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,7 @@ sphinxcontrib-paverutils = "^1.17.0"
 cogapp = "^3.3.0"
 asyncclick = "^8.1.3.4"
 pgcli = "^3.5.0"
+openpyxl = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "~= 22.0"
