--- a/bases/rsptx/book_server_api/routers/personalized_parsons/requirements.txt
+++ b/bases/rsptx/book_server_api/routers/personalized_parsons/requirements.txt
@@ -2,25 +2,41 @@ aiohttp==3.8.5
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
-certifi==2023.5.7
+certifi==2023.7.22
 charset-normalizer==3.2.0
-et-xmlfile==1.1.0
+docopt==0.6.2
+filelock==3.12.2
 frozenlist==1.4.0
+fsspec==2023.6.0
 fuzzywuzzy==0.18.0
+huggingface-hub==0.16.4
 idna==3.4
-Levenshtein==0.21.1
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
 multidict==6.0.4
-numpy==1.25.1
+networkx==3.1
+numpy==1.25.2
 openai==0.27.8
-openpyxl==3.1.2
+package-name==0.1
+packaging==23.1
 pandas==2.0.3
+pipdeptree==2.12.0
+pipreqs==0.4.13
 python-dateutil==2.8.2
-python-Levenshtein==0.21.1
 pytz==2023.3
-rapidfuzz==3.1.2
+PyYAML==6.0.1
+regex==2023.8.8
 requests==2.31.0
+safetensors==0.3.2
 six==1.16.0
-tqdm==4.65.0
+sympy==1.12
+tokenizers==0.13.3
+torch==2.0.1
+tqdm==4.66.0
+transformers==4.31.0
+typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==1.26.7
+urllib3==2.0.4
+yarg==0.1.9
 yarl==1.9.2
