--- a/bases/rsptx/book_server_api/routers/personalized_parsons/requirements.txt
+++ b/bases/rsptx/book_server_api/routers/personalized_parsons/requirements.txt
@@ -1,3 +1,7 @@
+fuzzywuzzy==0.18.0
+openai==0.28.1
+pandas==2.0.3
+python-dotenv==1.0.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 async-timeout==4.0.2
@@ -8,7 +12,6 @@ docopt==0.6.2
 filelock==3.12.2
 frozenlist==1.4.0
 fsspec==2023.6.0
-fuzzywuzzy==0.18.0
 huggingface-hub==0.16.4
 idna==3.4
 Jinja2==3.1.2
@@ -17,10 +20,8 @@ mpmath==1.3.0
 multidict==6.0.4
 networkx==3.1
 numpy==1.25.2
-openai==0.27.8
 package-name==0.1
 packaging==23.1
-pandas==2.0.3
 pipdeptree==2.12.0
 pipreqs==0.4.13
 python-dateutil==2.8.2
@@ -32,9 +33,7 @@ safetensors==0.3.2
 six==1.16.0
 sympy==1.12
 tokenizers==0.13.3
-torch==2.0.1
 tqdm==4.66.0
-transformers==4.31.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
